add-email type to the views

--- a/app/views/user_mailer/update_info.html.erb
+++ b/app/views/user_mailer/update_info.html.erb
@@ -7,8 +7,8 @@
     <h1>Salut <%= @user.full_name %> </h1>
     <p>
       Vous avez modifié vos paramètres personnels, 
-      Pour accéder à tvotre espace client, connecte-toi via : <%= @url %>.
+      Pour accéder à votre espace personnel, connectez-vous via : <%= @url %>.
     </p>
-    <p> À très vite sur monsite.fr !
+    <p> À très vite sur openair.fr !
   </body>
 </html>
