--- a/app/views/user_mailer/update_info.txt.erb
+++ b/app/views/user_mailer/update_info.txt.erb
@@ -2,7 +2,7 @@
     Salut <%= @user.full_name %> 
     ============================================================
       Vous avez modifié vos paramètres personnels, 
-      Pour accéder à tvotre espace client, connecte-toi via : <%= @url %>.
+      Pour accéder à tvotre espace personnel, connectez-vous via : <%= @url %>.
     
-     À très vite sur monsite.fr !
+     À très vite sur openair.fr !
   
