--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,13 +4,13 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.full_name %> et bienvenue chez nous !</h1>
+    <h1>Salut <%= @user.full_name %> et bienvenue dans la communauté OpenAir</h1>
     <p>
-      Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %>.
+      Vous vous êtes inscrit sur Openair.fr en utilisant l'e-mail suivant : <%= @user.email %>.
     </p>
     <p>
-      Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
+      Pour accéder à votre espace personnel, connectez-vous via : <%= @url %>.
     </p>
-    <p> À très vite sur monsite.fr !
+    <p> À très vite sur openair.fr !
   </body>
 </html>
