--- a/app/views/user_mailer/welcome_email.txt.erb
+++ b/app/views/user_mailer/welcome_email.txt.erb
@@ -1,8 +1,8 @@
-Salut <%= @user.full_name %> et bienvenue chez nous !
+Salut <%= @user.full_name %> et bienvenue dans la communauté OpenAir !
 ==========================================================
  
-Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %>.
+Vous vous êtes inscrit sur openair.fr en utilisant l'e-mail suivant : <%= @user.email %>.
  
-Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
+Pour accéder à votre espace personnel, connectez-vous via : <%= @url %>.
  
-À très vite sur monsite.fr !
+À très vite sur openair.fr !
