fix: add yeld tag to render the topics on home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,6 +93,7 @@
                               </div>
                           </div>
                       </section>
+                      <%= yield %>
                       <!-- FOOTER -->
                         <footer id="footer" class="footer">
                           <div class="footer-top">
