--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,104 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-	<div class="field">
+
+
+
+                                    <div class="col-md-5 mx-auto my-4">
+                                        <div class="card p-5">
+                                            <div class="card-title px-4">
+                                                <h3 class="heading heading-5 strong-500">
+                                                    Create account
+                                                </h3>
+                                            </div>
+                                           
+                                                        <div class="col-12">
+                                                            <div class="form-group">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
-  </div>
-
-  <div class="field">
+                                                                <div class="input-group input-group--style-1">
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "First name" %>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    
+ 													
+ 													
+														<div class="col-12">
+                                                            <div class="form-group">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
-  </div>
+                                                                <div class="input-group input-group--style-1">
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Last name" %>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                  
 
-  <div class="field">
+
+ 													
+														<div class="col-12">
+                                                            <div class="form-group">
     <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true, autocomplete: "adress" %>
-  </div>
-
-  <div class="field">
+                                                                <div class="input-group input-group--style-1">
+    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adress" %>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                             
+                                                   
+                                                        <div class="col-12">
+                                                            <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+                                                                <div class="input-group input-group--style-1">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    
 
-  <div class="field">
+                                                    
+                                                        <div class="col-12">
+                                                            <div class="form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+                                                                <div class="input-group input-group--style-1">
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Password" %>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    
 
-  <div class="field">
+                                                        <div class="col-12">
+                                                            <div class="form-group">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+                                                                <div class="input-group input-group--style-1">
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirm Password" %>
+                                                                </div>
+                                                            </div>
+                                                        </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
+                                                    <div class="row py-4">
+                                                        <div class="col-12">
+                                                            <div class="checkbox">
+                                                                <input type="checkbox" name="checkbox_example_1" id="checkboxExample_1a">
+                                                                <label for="checkboxExample_1a">Conditions of use</label>
+                                                            </div>
 <%= render "devise/shared/links" %>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="row align-items-center">
+                                                        <div class="col-md-12 text-right">
+                                                        	<%= f.submit "Inscription", class: "btn btn-styled btn-base-1" %>
+                                                        </div>
+                                                    </div>
+                                              
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+<% end %>
