test: render images of  the seed

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -15,7 +15,7 @@
                         <div class="card-image">
                             <div class="view view-first">
                                 <a href="#">
-                                    <%= image_tag "prv/blog/img-tech-1.jpg" %>
+                                    <%= image_tag (topics.main_picture) %>
                                 </a>
                             </div>
                         </div>
