--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,102 +36,9 @@
                                   </div>
                           </section>
 
-                          <!-- Navbar -->
-                  <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark  ">
-                              <div class="container navbar-container">
-                                  <!-- Brand/Logo -->
-                                      <%# <a class="navbar-brand" href="../../index.html">
-                                      <%= image_tag "logo/logo-1-a.png", class: "d-none d-lg-inline-block", alt: "Boomerang" %>
-                                      <%# <%= image_tag "logo/logo-1-a.png", class: "d-lg-none", alt: "Boomerang"</a> %> 
-                                  
-                                  <%# <div class="d-inline-block">
-                                      <!-- Navbar toggler  -->
-                                      <%# <button class="navbar-toggler hamburger hamburger-js hamburger--spring" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-                                          <span class="hamburger-box">
-                                              <span class="hamburger-inner"></span>
-                                          </span>
-                                      </button>
-                                  </div> %>
-
-                      <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main"> 
-                          <!-- Navbar links -->
-                          <ul class="navbar-nav">
-                              <li class="nav-item dropdown megamenu">
-                                  <a class="nav-link" href="../../index.html">
-                                      Overview
-                                  </a>
-                              </li>
-                          <ul class="navbar-nav ml-lg-auto">
-                              <li class="nav-item">
-                                  <a href="../../documentation/getting-started/introduction.html" class="nav-link">
-                                    Docs
-                                  </a>
-                              </li>
-                          </ul>
-                          </div>
-                          <div class="pl-4 d-none d-lg-inline-block">
-                              <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-sm btn-base-1 btn-circle" target="_blank">
-                                  Menu
-                              </a>
-                          </div>
-                  </nav>
-                      </div>
-                      <section class="slice-xl slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(<%= asset_path'prv/blog/img-wide-lg-3.jpg'%>); background-position: bottom center;">
-                          <span class="mask mask-dark--style-1"></span>
-                          <div class="container">
-                              <div class="row">
-                                  <div class="col-lg-6">
-                                      <div class="py-5">
-                                          <h2 class="heading heading-inverse heading-xl strong-600 text-capitalize line-height-1_2 animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
-                                              Open Air
-                                          </h2>
-                                          <p class="lead c-white animated mt-3" data-animation-in="fadeInUpBig" data-animation-delay="200">
-                                              There is not time to go slow.
-                                          </p>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </section>
+                      <%= render "navbar" %>
                       <%= yield %>
-                      <!-- FOOTER -->
-                        <footer id="footer" class="footer">
-                          <div class="footer-top">
-                              <div class="container">
-                                  <div class="row cols-xs-space cols-sm-space cols-md-space">
-                                      <div class="col-lg-5">
-                                          <div class="col">
-                                              <%= image_tag "logo/logo-1-c.png" %>
-                                              <span class="clearfix"></span>
-                                              <span class="heading heading-sm c-gray-light strong-400">One template. Infinite solutions.</span>
-                                              <div class="copyright mt-4">
-                                                  <p>
-                                                      Copyright &copy; 2019                                <a href="https://webpixels.io" target="_blank">
-                                                          <strong>Open-Air</strong>
-                                                      </a> -
-                                                      All rights reserved
-                                                  </p>
-                                              </div>
-                                          </div>
-                                      </div>
-                                      <div class="col-lg-2">
-                                          <div class="col">
-                                            <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
-                                                Support
-                                            </h4>
-                                            <ul class="footer-links">
-                                                  <li><a href="#" title="Help center">Help center</a></li>
-                                                  <li><a href="#" title="Discussions">Discussions</a></li>
-                                                  <li><a href="#" title="Contact support">Contact</a></li>
-                                                  <li><a href="#" title="Blog">Blog</a></li>
-                                                  <li><a href="#" title="Jobs">FAQ</a></li>
-                                              </ul>
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </footer>
+                      <%= render "footer" %>                       
                     </div>
                 </div>
             </div><!-- END: st-pusher -->
