--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
                                   </div>
                           </section>
 
-                      <%= render "navbar" %>
+                      <%= render "topics/navbar" %>
                       <%= yield %>
-                      <%= render "footer" %>                       
+                      <%= render "topics/footer" %>                       
                     </div>
                 </div>
             </div><!-- END: st-pusher -->
