--- a/app/views/topics/_navbar.html.erb
+++ b/app/views/topics/_navbar.html.erb
@@ -19,17 +19,11 @@
                           <!-- Navbar links -->
                           <ul class="navbar-nav">
                               <li class="nav-item dropdown megamenu">
-                                  <a class="nav-link" href="../../index.html">
-                                      Overview
+                                  <a class="nav-link" href="/">
+                                      Home
                                   </a>
                               </li>
-                          <ul class="navbar-nav ml-lg-auto">
-                              <li class="nav-item">
-                                  <a href="../../documentation/getting-started/introduction.html" class="nav-link">
-                                    Docs
-                                  </a>
-                              </li>
-                          </ul>
+                          
                           </div>
                           <div class="btn-group">
                             <button type="button" class="btn btn-info">Menu</button>
@@ -37,9 +31,15 @@
                                 <span class="sr-only">Toggle Dropdown</span>
                             </button>
                             <div class="dropdown-menu">
+                            <% unless user_signed_in? %>
                                 <%= link_to "Log In", new_user_session_path, class: "dropdown-item"  %>
                                 <%= link_to "Sign Up", new_user_registration_path, class: "dropdown-item"  %>
-                                
+                                <% else %>
+                            <div class="dropdown-menu" >
+                                <%= link_to "Mon profile", edit_user_registration_path, class: "dropdown-item"  %>
+                                <%= button_to "Log out", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
+                            </div>
+                            <% end %>
                             </div>
                             </div>
                   </nav>
