fix-change email text and add official openair email

--- a/app/views/user_mailer/bye_email.html.erb
+++ b/app/views/user_mailer/bye_email.html.erb
@@ -5,12 +5,15 @@
   </head>
   <body>
   
-    <h1>Salut <%= @user.full_name %> </h1>
-    <p>Cet email a seulement pout objectif de vous confirmer la supression de votre compte et de vous informer
-    que vous pouvez toujours utiliser nos services ! 
+    <h1>Bonjour <%= @user.full_name %> </h1>
+    
+    <p>
+    Cet e-mail confirme que vous avez suprimé votre compte OpenAir.
+   
+    Si vous avez reçu cet e-mail par erreur, merci de l'ignorer.
     </p>
     
     
-    <p> À très vite sur openair.fr !
+    <p> À très vite sur openair.fr !</p>
   </body>
 </html>
