--- a/app/views/user_mailer/bye_email.txt.erb
+++ b/app/views/user_mailer/bye_email.txt.erb
@@ -1,11 +1,11 @@
   
-      Salut <%= @user.full_name %> 
+  Bonjour <%= @user.full_name %> 
 ===================================================================================
-    Cet email a seulement pout objectif de vous confirmer la supression de votre compte et de vous informer
-    que vous pouvez toujours utiliser nos services ! 
+      Cet e-mail confirme que vous avez suprimé votre compte OpenAir.
+   
+      Si vous avez reçu cet e-mail par erreur, merci de l'ignorer.
     
     
     
      À très vite sur openair.fr !
-  </body>
-</html>
+ 
