--- a/app/views/user_mailer/welcome_email.txt.erb
+++ b/app/views/user_mailer/welcome_email.txt.erb
@@ -1,8 +1,11 @@
-Salut <%= @user.full_name %> et bienvenue dans la communauté OpenAir !
+Bonjour <%= @user.full_name %> et bienvenue dans la communauté OpenAir !
 ==========================================================
  
-Vous vous êtes inscrit sur openair.fr en utilisant l'e-mail suivant : <%= @user.email %>.
- 
-Pour accéder à votre espace personnel, connectez-vous via : <%= @url %>.
- 
+
+Votre compte OpenAir a bien été créé. 
+Merci de votre inscription et bienvenue parmi nous.
+Votre nom : <%@user.last_name%>
+Votre prènom: <%@user.first_name%>
+Votre email : <%@user.email%>
+
 À très vite sur openair.fr !
