fix: correct partial pathes in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
                                   </div>
                           </section>
 
-                      <%= render "layout/navbar" %>
+                      <%= render "layouts/navbar" %>
                       <%= yield %>
-                      <%= render "layout/footer" %>                       
+                      <%= render "layouts/footer" %>                       
                     </div>
                 </div>
             </div><!-- END: st-pusher -->
