--- a/app/views/user_mailer/welcome_email.txt.erb
+++ b/app/views/user_mailer/welcome_email.txt.erb
@@ -4,8 +4,8 @@ Bonjour <%= @user.full_name %> et bienvenue dans la communauté OpenAir !
 
 Votre compte OpenAir a bien été créé. 
 Merci de votre inscription et bienvenue parmi nous.
-Votre nom : <%@user.last_name%>
-Votre prènom: <%@user.first_name%>
-Votre email : <%@user.email%>
+Votre nom : <%=@user.last_name%>
+Votre prènom: <%=@user.first_name%>
+Votre email : <%=@user.email%>
 
 À très vite sur openair.fr !
