fix-change welcome email type

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -10,9 +10,7 @@
       Merci de votre inscription et bienvenue parmi nous.
     </p>
     <p>
-      Votre nom : <%=@user.last_name%><br>
-      Votre prènom: <%=@user.first_name%><br>
-      Votre email : <%=@user.email%><br>
+      Ceci est un message automatique, merci de ne pas y répondre.<br>
     </p>
     <p> À très vite sur openair.fr !</p>
   </body>
