--- a/app/views/topics/_navbar.html.erb
+++ b/app/views/topics/_navbar.html.erb
@@ -26,7 +26,7 @@
                           
                           </div>
                           <div class="btn-group">
-                            <button type="button" class="btn btn-info">Menu</button>
+                            <button type="button" class="btn btn-info">Mon compte</button>
                             <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="sr-only">Toggle Dropdown</span>
                             </button>
