--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -20,7 +20,7 @@
                                 <div class="card-image">
                                     <div class="view view-first">
                                         <a href="/topics/<%=topic.id%>">
-                                            <%= image_tag topic.main_picture.variant(resize: "1000 x760!") %>
+                                            <%= image_tag topic.main_picture %>
                                         </a>
                                     </div>
                                 </div>
