fix-change language typo navbar

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -5,7 +5,7 @@
                     Description:
                     </h3>
                     <p>
-                        Photo de chat n°<%= @topics.title %>. Pellentesque habitant morbi tristique senectus et netus
+                        TEST n°<%= @topics.title %>. Pellentesque habitant morbi tristique senectus et netus
                             malesuada fames turpis egestas. Vestibulum tortor quam feugiat vitae ultricies eget tempor.
                     </p>
                 </div>
