feat(lang): change lang to frensh

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,11 +3,11 @@
 <div class="col-3 mx-auto my-5">
 <div class="card p-3 align-items-center">
   <div class="field">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Votre email" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Reset password", class: "btn btn-styled btn-base-1"  %>
+    <%= f.submit "Envoyer", class: "btn btn-styled btn-base-1"  %>
   </div>
 <% end %>
 </div>
