--- a/app/views/devise/registrations/_edit_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_edit_registration_form_fields.html.erb
@@ -5,7 +5,7 @@
                                         <div class="card p-5">
                                             <div class="card-title px-4">
                                                 <h3 class="heading heading-5 strong-500">
-                                                    Create account
+                                                    Mon profil
                                                 </h3>
                                             </div>
                                            
@@ -13,7 +13,7 @@
                                                             <div class="form-group">
     <%= f.label :first_name %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "First name" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -24,7 +24,7 @@
                                                             <div class="form-group">
     <%= f.label :last_name %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Last name" %>
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
                                                                 </div>
                                                             </div>
                                                         </div>
