--- a/app/views/devise/registrations/_new_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_new_registration_form_fields.html.erb
@@ -5,15 +5,15 @@
                                         <div class="card p-5">
                                             <div class="card-title px-4">
                                                 <h3 class="heading heading-5 strong-500">
-                                                    Create account
+                                                    Créer un compte
                                                 </h3>
                                             </div>
                                            
                                                         <div class="col-12">
                                                             <div class="form-group">
-    <%= f.label :first_name %><br />
+    <%= f.label :Prénom %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "First name" %>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -22,9 +22,9 @@
  													
 														<div class="col-12">
                                                             <div class="form-group">
-    <%= f.label :last_name %><br />
+    <%= f.label :Nom %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Last name" %>
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -34,9 +34,9 @@
  													
 														<div class="col-12">
                                                             <div class="form-group">
-    <%= f.label :address %><br />
+    <%= f.label :Adresse %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adress" %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adresse" %>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -55,12 +55,12 @@
                                                     
                                                         <div class="col-12">
                                                             <div class="form-group">
-    <%= f.label :password %>
+    <%= f.label :Mot_de_passe %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Mot de passe" %>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -68,9 +68,9 @@
 
                                                         <div class="col-12">
                                                             <div class="form-group">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :confiermer_le_mot_de_passe %><br />
                                                                 <div class="input-group input-group--style-1">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirm Password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirmer le mot de passe" %>
                                                                 </div>
                                                             </div>
                                                         </div>
