change email type reset pswd

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -6,5 +6,6 @@
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>Si vous n'êtes pas à l'origine de cette demande, veuillez ne pas tenir compte de cet email.</p><br>
-<p>Merci de votre confiance et à très bientôt.</p>
+<p>Merci de votre confiance et à très bientôt.</p><br>
+<p>L'équipe Open Air</p>
 
