--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
                                   </div>
                           </section>
 
-                      <%= render "topics/navbar" %>
+                      <%= render "layouts/navbar" %>
                       <%= yield %>
-                      <%= render "topics/footer" %>
+                      <%= render "layouts/footer" %>
                     </div>
                 </div>
             </div><!-- END: st-pusher -->
