fix - rep Open-Air by Open air in footer

--- a/app/views/topics/_footer.html.erb
+++ b/app/views/topics/_footer.html.erb
@@ -10,7 +10,7 @@
                                               <div class="copyright mt-4">
                                                   <p>
                                                       Copyright &copy; 2019                                <a href="https://webpixels.io" target="_blank">
-                                                          <strong>Open-Air</strong>
+                                                          <strong>Open Air</strong>
                                                       </a> -
                                                       All rights reserved
                                                   </p>
