feat - replace picture (car -> Frioul island) in home page header

--- a/app/views/topics/_navbar.html.erb
+++ b/app/views/topics/_navbar.html.erb
@@ -27,7 +27,7 @@
                             </div>
                   </nav>
                       </div>
-                      <section class="slice-xl slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(<%= asset_path'prv/blog/img-wide-lg-3.jpg'%>); background-position: bottom center;">
+                      <section class="slice-xl slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(<%= asset_path 'banner-air-quality.jpg' %>); background-position: bottom center;">
                           <span class="mask mask-dark--style-1"></span>
                           <div class="container">
                               <div class="row">
