--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,12 +3,10 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="block block-post">
-                    <div class="mb-4">
-                        
-                        <h3 class="heading heading-2 strong-400 text-normal">
-                            <%=@topic.title%>                                            
+                    <div class="section-title section-title--style-2 text-center mb-4">
+                        <h3 class="section-title-inner heading-2 strong-400">
+                            <span> <%=@topic.title%> </span>
                         </h3>
-                        
                     </div>
 
                     <div class="block-image">
@@ -23,14 +21,13 @@
                        
                         <br><br>
                     
-                    <div class="mb-4">
-                        
-                        <h3 class="heading heading-2 strong-400 text-normal">
-                            <%=@topic.driver_section_title%>                                            
+                    <div class="section-title section-title--style-1 text-center mb-4">
+                        <h3 class="section-title-inner heading-2 strong-400">
+                            <span> <%=@topic.driver_section_title%> </span>
                         </h3>
-                        
+                        <span class="section-title-delimiter clearfix"></span>
                     </div>
-
+                    
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.driver_section_intro%>
@@ -43,12 +40,11 @@
                    
                     <br><br>
 
-                    <div class="mb-4">
-                        
-                        <h3 class="heading heading-2 strong-400 text-normal">
-                            <%=@topic.pressure_section_title%>                                            
+                    <div class="section-title section-title--style-1 text-center mb-4">
+                        <h3 class="section-title-inner heading-2 strong-400">
+                            <span> <%=@topic.pressure_section_title%> </span>
                         </h3>
-                        
+                        <span class="section-title-delimiter clearfix"></span>
                     </div>
 
                     <div class="block-body block-post-body">
@@ -63,12 +59,11 @@
 
                     <br><br>
                     
-                    <div class="mb-4">
-                        
-                        <h3 class="heading heading-2 strong-400 text-normal">
-                            <%=@topic.state_section_title%>                                            
+                    <div class="section-title section-title--style-1 text-center mb-4">
+                        <h3 class="section-title-inner heading-2 strong-400">
+                            <span> <%=@topic.state_section_title%> </span>
                         </h3>
-                        
+                        <span class="section-title-delimiter clearfix"></span>
                     </div>
 
                     <div class="block-body block-post-body">
@@ -83,12 +78,11 @@
                         
                         <br><br>
 
-                    <div class="mb-4">
-                        
-                        <h3 class="heading heading-2 strong-400 text-normal">
-                            <%=@topic.impact_section_title%>                                            
+                    <div class="section-title section-title--style-1 text-center mb-4">
+                        <h3 class="section-title-inner heading-2 strong-400">
+                            <span> <%=@topic.impact_section_title%> </span>
                         </h3>
-                        
+                        <span class="section-title-delimiter clearfix"></span>
                     </div>
 
                     <div class="block-body block-post-body">
@@ -103,12 +97,11 @@
 
                     <br><br>
 
-                    <div class="mb-4">
-                        
-                        <h3 class="heading heading-2 strong-400 text-normal">
-                            <%=@topic.response_section_title%>                                            
+                    <div class="section-title section-title--style-1 text-center mb-4">
+                        <h3 class="section-title-inner heading-2 strong-400">
+                            <span> <%=@topic.response_section_title%> </span>
                         </h3>
-                        
+                        <span class="section-title-delimiter clearfix"></span>
                     </div>
 
                     <div class="block-body block-post-body">
