feat - separate navbar from header partial for the topic index view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <div class="st-content-inner">
               <%= render "topics/navbar" %>
               <!-- Header -->  
-              <%= render "topics/main-banner" %>
+              <%= render "topics/topic-index-banner" %>
               <section class="slice sct-color-1">
                 <div class="container">
                   <%= yield %>
