fix notice navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,22 @@
           <!-- Navbar -->
                   <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark  ">
+                              
                               <div class="container navbar-container">
+                                <div class="collapse navbar-collapse align-items-center justify-content-start" id="navbar_main">
+                                  <% if notice %>
+                                  <br>
+                                  <div id="notice" class="alert alert-warning" role="alert">
+                                    <%= notice %></div>
+                                  <% end -%>
+
+                                  <% if alert %>
+                                  <br>
+                                  <div id="alert" class="alert alert-warning" role="alert">
+                                  <%= alert %>
+                                  </div>
+                                  <% end -%>
+                                  </div>
+                                  </div>
 
                       <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main"> 
                           <!-- Navbar links -->
@@ -44,3 +60,6 @@
                               </div>
                           </div>
                       </section>
+ 
+
+
