add: show alert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         </head>
             <body>
               <!-- MAIN WRAPPER -->
-                
+
                           <div class="st-pusher">
                               <div class="st-content">
                                   <div class="st-content-inner">
@@ -36,8 +36,9 @@
                                   <div class="global-search-backdrop mask-dark--style-2">
                                   </div>
                           </section>
-                          
+
                       <%= render "layouts/navbar" %>
+                      <%= render 'layouts/messages' %>
                       <%= yield %>
                       <%= render "layouts/footer" %>
                     </div>
