--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,41 +1,30 @@
           <!-- Navbar -->
                   <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark  ">
                               <div class="container navbar-container">
-                                  <!-- Brand/Logo -->
-                                      <%# <a class="navbar-brand" href="../../index.html">
-                                      <%= image_tag "logo/logo-1-a.png", class: "d-none d-lg-inline-block", alt: "Boomerang" %>
-                                      <%# <%= image_tag "logo/logo-1-a.png", class: "d-lg-none", alt: "Boomerang"</a> %> 
-                                  
-                                  <%# <div class="d-inline-block">
-                                      <!-- Navbar toggler  -->
-                                      <%# <button class="navbar-toggler hamburger hamburger-js hamburger--spring" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-                                          <span class="hamburger-box">
-                                              <span class="hamburger-inner"></span>
-                                          </span>
-                                      </button>
-                                  </div> %>
 
                       <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main"> 
                           <!-- Navbar links -->
                           <ul class="navbar-nav">
                               <li class="nav-item dropdown megamenu">
-                                  <a class="nav-link" href="../../index.html">
-                                      Overview
+                                  <a class="nav-link" href="/">
+                                      Accueil
                                   </a>
                               </li>
-                          <ul class="navbar-nav ml-lg-auto">
-                              <li class="nav-item">
-                                  <a href="../../documentation/getting-started/introduction.html" class="nav-link">
-                                    Docs
-                                  </a>
-                              </li>
-                          </ul>
+                          
                           </div>
-                          <div class="pl-4 d-none d-lg-inline-block">
-                              <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-sm btn-base-1 btn-circle" target="_blank">
-                                  Menu
-                              </a>
-                          </div>
+                          <div class="btn-group">
+                            
+                            <% unless user_signed_in? %>
+                                <%= link_to "Se connecter", new_user_session_path, class: "dropdown-item"  %>
+                                <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item"  %>
+                                <% else %>
+                            
+                                <%= link_to "Mon profil", edit_user_registration_path, class: "dropdown-item"  %>
+                                <%= button_to "Se déconnecter", destroy_user_session_path, :method => :delete, class: "dropdown-item" %>
+                            
+                            <% end %>
+                            
+                            </div>
                   </nav>
                       </div>
                       <section class="slice-xl slice--offset-top has-bg-cover bg-size-cover" style="background-image: url(<%= asset_path'prv/blog/img-wide-lg-3.jpg'%>); background-position: bottom center;">
