--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,9 @@
                           </section>
 
                       <%= render "layouts/navbar" %>
-                      <%= render 'layouts/messages' %>
+                      <div class="container">
+                        <%= render 'layouts/messages' %>
+                      </div>
                       <%= yield %>
                       <%= render "layouts/footer" %>
                     </div>
