--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,19 +3,19 @@
   <label for="menu-toggler"></label>
   <ul>
     <li class="menu-item">
-      <a class="text-center" href="https://www.facebook.com/" target="_blank"><small>DRIVERS</small></a>
+      <a href="https://www.facebook.com/" target="_blank"><small>DRIVERS</small></a>
     </li>
     <li class="menu-item">
-      <a href="https://www.google.com/" target="_blank">PRESSURE</a>
+      <a href="https://www.google.com/" target="_blank"><small>PRESSURE</small></a>
     </li>
     <li class="menu-item">
-      <a href="https://dribbble.com/" target="_blank">IMPACT</a>
+      <a href="https://dribbble.com/" target="_blank"><small>IMPACT</small></a>
     </li>
     <li class="menu-item">
-      <a href="https://codepen.io/" target="_blank">STATE</a>
+      <a href="https://codepen.io/" target="_blank"><small>STATE</small></a>
     </li>
     <li class="menu-item">
-      <a target="_blank">RESPONSE</a>
+      <a href="https://codepen.io/" target="_blank"><small>RESPONSE</small></a>
     </li>
   </ul>
 </nav>
