--- a/app/views/devise/registrations/_edit_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_edit_registration_form_fields.html.erb
@@ -1,92 +1,92 @@
 
 
 
-                                    <div class="col-md-5 mx-auto my-4">
-                                        <div class="card p-5">
-                                            <div class="card-title px-4">
-                                                <h3 class="heading heading-5 strong-500">
-                                                    Mon profil
-                                                </h3>
-                                            </div>
-                                           
-                                                        <div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :first_name %><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    
- 													
- 													
-							<div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :last_name %><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                  
-
-
- 													
-							<div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :address %><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adress" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                             
-                                                   
-                                                        <div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :email %><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-							<div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :current_password %><i>(we need your current password to confirm your changes)</i><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.password_field :current_password, autofocus: true, autocomplete: "current_password", class: "form-control form-control-lg", placeholder: "Email" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+<div class="col-md-5 mx-auto my-4">
+    <div class="card p-5">
+        <div class="card-title px-4">
+            <h3 class="heading heading-5 strong-500">
+                Mon profil
+            </h3>
+        </div>
+    
+                    <div class="col-12">
+                        <div class="form-group">
+                            <%= f.label :Prénom %><br />
+                            <div class="input-group input-group--style-1">
+                                <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
+                            </div>
+                        </div>
+                    </div>
+                                                        
+                                                        
+                                                        
+                    <div class="col-12">
+                    <div class="form-group">
+                        <%= f.label :Nom %><br />
+                        <div class="input-group input-group--style-1">
+                                <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
+                        </div>
+                    </div>
+                </div>
                                                     
 
-                                                    
-                                                        <div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Password" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    
 
-                                                        <div class="col-12">
-                                                            <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-                                                                <div class="input-group input-group--style-1">
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirm Password" %>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+                                                        
+        <div class="col-12">
+            <div class="form-group">
+                <%= f.label :adresse %><br />
+                <div class="input-group input-group--style-1">
+                    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adress" %>
+                </div>
+            </div>
+        </div>
 
-                                                    <div class="row py-4">
-                                                        <div class="col-12">
-                                                            
-<%= render "devise/shared/links" %>
-                                                        </div>
-                                                    </div>
+
+        <div class="col-12">
+            <div class="form-group">
+                <%= f.label :email %><br />
+                <div class="input-group input-group--style-1">
+                    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12">
+            <div class="form-group">
+                <%= f.label :Mot_de_passe_actuel %><i>(Obligatoire pour modifier vos données)</i><br />
+                <div class="input-group input-group--style-1">
+                    <%= f.password_field :current_password, autofocus: true, autocomplete: "current_password", class: "form-control form-control-lg", placeholder: "Mot de passe actuel" %>
+                </div>
+            </div>
+        </div>
+    
+
+                                                        
+        <div class="col-12">
+            <div class="form-group">
+                    <%= f.label :Nouveau_mot_de_passe %>
+                    <% if @minimum_password_length %>
+                    <em>(<%= @minimum_password_length %> characters minimum)</em>
+                    <% end %><br />
+                <div class="input-group input-group--style-1">
+                    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Nouveau mot de passe" %>
+                </div>
+            </div>
+        </div>
+    
+
+        <div class="col-12">
+            <div class="form-group">
+                <%= f.label :Confirmer_le_mot_de_passe %><br />
+                <div class="input-group input-group--style-1">
+                    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirmer le mot de passe" %>
+                </div>
+            </div>
+        </div>
+
+    <div class="row py-4">
+        <div class="col-12">
+            
+        <%= render "devise/shared/links" %>
+        </div>
+    </div>
