feat: auto scroll button added on application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,5 +40,6 @@
         </div><!-- END: st-pusher -->
       </div><!-- END: st-container -->
     </div><!-- END: body-wrap -->
- </body>
+    <a href="#" class="back-to-top btn-back-to-top"></a>
+  </body>
 </html>
