feat - new title for the website banner

--- a/app/views/topics/_topic-index-banner.html.erb
+++ b/app/views/topics/_topic-index-banner.html.erb
@@ -1,17 +1,18 @@
 <section class="slice--offset-top parallax-section parallax-section-lg" style="background-image: url(<%= asset_path('air-quality-banner/banner-topic-index.jpg')%>);">
+    <span class="mask bg-base-3 alpha-3"></span>
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="row py-5">
-                    <div class="col-lg-8 col-md-8">
+                    <div class="col-lg-12 col-md-8">
                         <h1 class="heading heading-inverse heading-1 strong-400 text-normal">
-                            Open Air Aix-Marseille
+                           La Qualité de l'Air en Provence par l'Open Data
                         </h1>
 
                         <span class="clearfix"></span>
 
                         <div class="lead c-gray-lighter mt-3 mb-3">
-                            L'Open Data sur la Qualité de l'Air au service de votre Information
+                            Votre revue pour comprendre les données publiques sur la qualité de l'air
                         </div>
 
                         <span class="short-delimiter--style-1 mb-4"></span>
