fix: remove target: _blank not to open sign_in view in a new tab

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -48,7 +48,7 @@
             <% unless user_signed_in? %>
             <% unless (controller_name == "devise") %>
             <!-- Sign in button shall not appear when user is  in  the sign in page -->
-            <%= link_to "Se connecter", new_user_session_path, class: "btn btn-styled btn-base-1 btn-circle btn-teal-blue", target:"_blank"  %>
+            <%= link_to "Se connecter", new_user_session_path, class: "btn btn-styled btn-base-1 btn-circle btn-teal-blue" %>
             <% end %>
             <% else %>
             <%= button_to "Se déconnecter", destroy_user_session_path, :method => :delete, class: "btn btn-styled btn-base-1 btn-circle btn-teal-blue" %>
