feat:main_image change in show plus edit lang to frensh

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,7 +11,7 @@
 
 
                     <div class="block-image">
-                        <%= image_tag Topic.first.main_picture, class: "rounded" %> 
+                        <%= image_tag @topic.main_picture, class: "rounded" %> 
                     </div>
 
                     <div class="block-body block-post-body">
@@ -36,7 +36,7 @@
                     </div>
                     <br>
                     <div class="block-image">
-                        <%= image_tag Topic.first.main_picture, class: "rounded" %> 
+                        <%= image_tag @topic.main_picture, class: "rounded" %> 
                     </div>
                    
                     <br><br>
@@ -55,7 +55,7 @@
                     </div>
                     <br>
                     <div class="block-image">
-                        <%= image_tag Topic.first.main_picture, class: "rounded" %> 
+                        <%= image_tag @topic.main_picture, class: "rounded" %> 
                     </div>
 
                     <br><br>
@@ -74,7 +74,7 @@
                     </div>
                     <br>
                      <div class="block-image">
-                        <%= image_tag Topic.first.main_picture, class: "rounded" %> 
+                        <%= image_tag @topic.main_picture, class: "rounded" %> 
                     </div>
                         
                         <br><br>
@@ -93,7 +93,7 @@
                     </div>
                     <br>
                      <div class="block-image">
-                        <%= image_tag Topic.first.main_picture, class: "rounded" %> 
+                        <%= image_tag @topic.main_picture, class: "rounded" %> 
                     </div>
 
                     <br><br>
