feat: working on about page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,11 +19,11 @@
                         <ul class="footer-menu footer-menu-sm">
                             <% unless (controller_name == "topics" && action_name == "index") %>
                             <li>
-                                <%= link_to "Accueil", root_path, style: "padding-left: 0;"  %>
+                                <%= link_to "Accueil", root_path, style: "padding-left: 0;" %>
                             </li>
                             <% end %>
                             <li>
-                                <a href="#">À propos</a>
+                                <%# <%= link_to "À propos",  %> %>
                             </li>
                             <li>
                                 <a href="mailto:openair@alabintheair.cc">Contact</a>
