fix:change href to link_to

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,26 +36,32 @@
                 <div class="col-lg-3">
                     <div class="text-xs-center text-sm-right">
                         <ul class="social-media social-media--style-1-v4">
+                            
                             <li>
-                                <a href="https://www.facebook.com/A-LAB-in-the-AIR-1683991011853827/" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/company/a-lab-is-in-the-air/about/" class="linkedin" target="_blank" data-toggle="tooltip" data-original-title="Linkedin">
+                                <%= link_to "https://www.linkedin.com/company/a-lab-is-in-the-air/about/", target: "_blank" do %>
                                     <i class="fa fa-linkedin"></i>
-                                </a>
+                                <%end%>
                             </li>
                             <li>
-                                <a href="https://twitter.com/lab_in_the_air?lang=en" class="twitter" target="_blank" data-toggle="tooltip" data-original-title="Twitter">
+                                <%= link_to "https://www.facebook.com/A-LAB-in-the-AIR-1683991011853827/", target: "_blank" do %>
+                                    <i class="fa fa-facebook"></i>
+                                <%end%>
+                            </li>
+                            <li>
+                               <%= link_to "https://twitter.com/lab_in_the_air?lang=en", target: "_blank" do %>
                                     <i class="fa fa-twitter"></i>
-                                </a>
+                                <%end%>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </footer>
+
+
+
+
 
