feat: redirect about link in footer to about page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,7 +23,7 @@
                             </li>
                             <% end %>
                             <li>
-                                <%# <%= link_to "À propos",  %> %>
+                                <%= link_to "À propos", page_path('about') %>
                             </li>
                             <li>
                                 <a href="mailto:openair@alabintheair.cc">Contact</a>
