fix show type alerte msg success or danger

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <!-- Header -->  
               <%= render "topics/topic-index-banner" %>
               <div class="container">
-                <%= render 'layouts/messages' %>
+                <%= render 'layouts/flash' %>
               </div>
               <section class="slice sct-color-1">
                 <div class="container">
