fix - replace Topic.first by @topic

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -112,7 +112,7 @@
                     </div>
                     <br>
                      <div class="block-image">
-                        <%= image_tag Topic.first.main_picture, class: "rounded" %> 
+                        <%= image_tag @topic.main_picture, class: "rounded" %> 
                     </div>
                     
                     <br>
